--- a/css/estilo.css
+++ b/css/estilo.css
@@ -27,17 +27,40 @@ flex: 30%;
 }
 #imagenNombreRedondo {
     width: 150px;
+    position: relative;
+    z-index: 1000;
     height: 150px;
     background-color: white;
     display: flex;
     border-radius: 75px;
+    left: 10px;
+    background-image: url(../img/Recurso\ 7.png);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 #nombreRectangulo {
     background-color: #013334;
-    width: 20%;
+    width: 14%;
     padding: 20px;
     color: white;
     font-size: 25px;
     text-transform: uppercase;
     font-weight: bold;
+    position: absolute;
+    top: 14%;
+}
+ul li {
+   text-decoration: none;
+    display: inline;
+    }
+ul li {
+    color: #550101;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 5px;
+}
+ul li a:hover{
+    color:white;
+    text-decoration: underline dashed;
 }
