--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,9 +10,10 @@ display: flex;
 }
 #cuerpoContenido {
     width: 100%;
-    height: 500px;
     border: 1px solid black;
-    background-color: #d3ee9f;
+    background-color:#d3ee9f;
+    display: flex;
+    padding-top:50px;
 }
 footer {
     width: 100%;
@@ -24,6 +25,8 @@ flex: 30%;
 }
 #cabeceraMenu {
     flex: 70%;
+    margin-top: 15px 20px 0 0;
+    text-align: right;
 }
 #imagenNombreRedondo {
     width: 150px;
@@ -52,8 +55,9 @@ flex: 30%;
 ul li {
    text-decoration: none;
     display: inline;
+    border-right: solid 2px #550101;
     }
-ul li {
+ul li a {
     color: #550101;
     text-decoration: none;
     text-transform: uppercase;
@@ -63,4 +67,16 @@ ul li {
 ul li a:hover{
     color:white;
     text-decoration: underline dashed;
+}
+#logoInicio{
+    background-image: url(/img/Recurso\ 7.png);
+    padding: 2px 0 0;
+    background-size:  18px;
+    background-repeat: no-repeat;
+}
+#cuerpoImagen{
+    flex: 40%;
+}
+#cuerpoDetalle{
+    flex: 60%;
 }
