--- a/css/estilo.css
+++ b/css/estilo.css
@@ -78,5 +78,23 @@ ul li a:hover{
     flex: 40%;
 }
 #cuerpoDetalle{
-    flex: 60%;
+    flex: 60%;   
+}
+#bordeImagen{
+    background-color: #d46b68;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    width: 80%;
+    margin: auto;
+    border-radius: 10px;
+}
+h1{
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+#datosDetalle{
+    text-align: justify;
+    padding: 40px;
 }
