--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,8 +17,6 @@ display: flex;
 }
 footer {
     width: 100%;
-    height: 200px;
-    border: 1px solid black;
 }
 #cabeceraImagenNombre {
 flex: 30%;
@@ -97,4 +95,31 @@ h1{
 #datosDetalle{
     text-align: justify;
     padding: 40px;
+}
+#botones{
+ display: flex; 
+ padding: 30px;
+}
+#botonFavorito{
+flex: 50%;
+}
+#marcoFavorito{
+background-image: url(/img/Recurso\ 13.png);
+}
+#marcoUbicacion{
+    background-image: url(/img/Recurso\ 2.png);
+}
+.disenoBoton{
+    width: 250px;
+    background-color: #cccccc;
+    border-radius: 20px;
+    background-size: 28px;
+    background-repeat: no-repeat;
+    padding: 20px 20px 20px 40px;
+    width: 150px;
+    background-position: left 5px center;
+}
+.disenoBoton:hover {
+opacity: 60%;
+cursor: pointer;
 }
