--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,19 +4,18 @@ margin: 0;
 }
 #cabeceraContenido { 
 width: 100%;
-border: 1px solid black;
 background-color: #67999A;
 display: flex;
 }
 #cuerpoContenido {
     width: 100%;
-    border: 1px solid black;
     background-color:#d3ee9f;
     display: flex;
     padding-top:50px;
 }
 footer {
     width: 100%;
+    background-color: #7b9e35;
 }
 #cabeceraImagenNombre {
 flex: 30%;
@@ -77,6 +76,7 @@ ul li a:hover{
 }
 #cuerpoDetalle{
     flex: 60%;   
+    padding: 40px;
 }
 #bordeImagen{
     background-color: #d46b68;
@@ -122,4 +122,45 @@ background-image: url(/img/Recurso\ 13.png);
 .disenoBoton:hover {
 opacity: 60%;
 cursor: pointer;
+}
+ul li:last-child {
+border-right: none;
+}
+#menuFooter {
+    flex: 20%;
+}
+nav a{
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+}
+nav a:hover{
+    color: #550101;
+    font-size: 15px;
+}
+#contenidoFooter{
+    flex: 40%;
+    text-align: justify;
+}
+#socialFooter{
+    flex: 40%;
+}
+.socialesFooter li{
+    border: none;
+    text-align: center;
+
+}
+li img{
+    width: 5%;
+    padding: 10px;
+}
+li img:hover{
+    opacity: 60%;
+    cursor: pointer;
+}
+#marcoFooter{
+    display: flex;
+    padding: 50px;
 }
